force-app/main/default/objects/Adoption__c/Adoption__c.object-meta.xml
<CustomObject>
    <description>Adopt a new pal today!</description>
    <label>Adoption</label>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adoptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>