force-app/main/default/objects/Adoption__c/fields/Adoption_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adoption Cost</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>