force-app/main/default/objects/Adoption__c/fields/Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>Animal_Type__c</fullName>
    <label>Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>