force-app/main/default/objects/Adoption__c/fields/Current_Days_in_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Current_Days_in_Shelter__c</fullName>
    <formula>TODAY() - Shelter_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Days in Shelter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>