force-app/main/default/objects/Adoption__c/fields/Currently_in_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_Shelter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Currently in Shelter</label>
    <type>Checkbox</type>
</CustomField>