force-app/main/default/objects/Adoption__c/fields/Shelter_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Start_Time__c</fullName>
    <label>Shelter Start Time</label>
    <type>Date</type>
</CustomField>