force-app/main/default/objects/Adoption__c/fields/Vaccination__c.field-meta.xml
<CustomField>
    <fullName>Vaccination__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Vaccination</label>
    <type>Checkbox</type>
</CustomField>