force-app/main/default/objects/Adoption__c/validationRules/Must_Have_A_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_A_Start_Date</fullName>
    <active>true</active>
    <description>Every Adoption Post record must have a start date.</description>
    <errorConditionFormula>ISBLANK( Shelter_Start_Time__c )</errorConditionFormula>
    <errorDisplayField>Shelter_Start_Time__c</errorDisplayField>
    <errorMessage>Every Adoption Post must have a start date.</errorMessage>
</ValidationRule>