force-app/main/default/objects/Adoption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currently_in_Shelter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>