force-app/main/default/objects/Adoption__c/listViews/Employee_Adoption.listView-meta.xml
<ListView>
    <fullName>Employee_Adoption</fullName>
    <filterScope>Queue</filterScope>
    <label>Employee</label>
    <queue>Employee</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>